# MinesweeperSFML

./: CMakeLists.txt  README.md
logs/: logs.txt
src/: main.cpp
src/core/: Application.cpp  Application.h
src/core/characters/: Player.cpp  Player.h
src/core/states/: GameState.cpp  GameState.h  HowToPlayMenuState.cpp  HowToPlayMenuState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
src/gameElements/: GameBoard.cpp  GameBoard.h
src/ui/: Button.cpp  Button.h
src/utilities/input/: Input.cpp  Input.h
src/utilities/logger/: Color.cpp  Color.h  Formatter.cpp  Formatter.h  Logger.cpp  Logger.h  Outputter.cpp  Outputter.h  Record.cpp  Record.h  Time.h
test/gameElements/: GameBoardTest.cpp
